--- a/AnalysisReport.Rmd
+++ b/AnalysisReport.Rmd
@@ -225,22 +225,22 @@ dfData <- with(dfDataTep, dfDataTep[order(Level,decreasing = TRUE),])
 Avatar2 <- ParticipantOrder2 %>% filter(Level=="Avatar")
 Blocks2 <- ParticipantOrder2 %>% filter(Level=="Blocks")
 #Histograms 
-qplot(Avatar1$accPerc,
-      geom="histogram",
-      bins = 50, 
-      main = "Performance as Percentages in Avatar 1",
-      xlim = c(0, 1),
-      ylim = c(0, 3),
-      xlab = "Avatar performance")
-
-
-qplot(Blocks1$accPerc,
-      geom="histogram",
-      bins = 50,
-      xlim = c(0, 1),
-      ylim = c(0, 3),
-      main = "Performance as Percentages in Blocks 1", 
-      xlab = "Blocks performance")
+# qplot(Avatar1$accPerc,
+#       geom="histogram",
+#       bins = 50, 
+#       main = "Performance as Percentages in Avatar 1",
+#       xlim = c(0, 1),
+#       ylim = c(0, 3),
+#       xlab = "Avatar performance")
+# 
+# 
+# qplot(Blocks1$accPerc,
+#       geom="histogram",
+#       bins = 50,
+#       xlim = c(0, 1),
+#       ylim = c(0, 3),
+#       main = "Performance as Percentages in Blocks 1", 
+#       xlab = "Blocks performance")
 
 #ordernumber 1
 #Use ParticipantOrder1 and Body,Blocks1
@@ -256,21 +256,21 @@ t.test(Avatar1$accPerc, Blocks1$accPerc)
 
 #parametric data
 #Histograms
-qplot(Avatar2$accPerc,
-      geom="histogram",
-      bins = 50,
-      xlim = c(0, 1),
-      ylim = c(0, 3),
-      main = "Performance as Percentages in Avatar 2", 
-      xlab = "Avatar performance")
-
-qplot(Blocks2$accPerc,
-      geom="histogram",
-      bins = 50,
-      xlim = c(0, 1),
-      ylim = c(0, 3),
-      main = "Performance as Percentages in Blocks 2", 
-      xlab = "Blocks performance")
+# qplot(Avatar2$accPerc,
+#       geom="histogram",
+#       bins = 50,
+#       xlim = c(0, 1),
+#       ylim = c(0, 3),
+#       main = "Performance as Percentages in Avatar 2", 
+#       xlab = "Avatar performance")
+# 
+# qplot(Blocks2$accPerc,
+#       geom="histogram",
+#       bins = 50,
+#       xlim = c(0, 1),
+#       ylim = c(0, 3),
+#       main = "Performance as Percentages in Blocks 2", 
+#       xlab = "Blocks performance")
 
 #Check for normality(Shapiro Wilks Test)
 SWTestAvatar2 <- shapiro.test(Avatar2$accPerc)
@@ -739,6 +739,51 @@ dev.off()
 
 ```
 
+```{r SoA compact plot}
 
 
+gg2 <- summarySE(dfData, measurevar="SoA", groupvars =c( "Level"))
+#https://www.rdocumentation.org/packages/Rmisc/versions/1.5/topics/summarySE
+#gg2 has the red dots from the means it produces and the ci values used below
+
+ 
+
+SoACompactPlot <- ggplot(gg2, aes(Level, SoA, colour=Level)) + theme_bw(base_size = 25) +
+  geom_jitter(data = dfData, aes(Level, SoA), width=0.2, color="black", alpha=0.5, size=3) + 
+  geom_point(position=position_dodge(0.2), size=4, colour="red") +
+  geom_errorbar(aes(ymin=SoA-ci, ymax=SoA+ci), width=.4, position = position_dodge(0.2), color=c("red", "blue")) +
+  scale_x_discrete(limits=c(), labels=c("Blocks", "Avatar")) +
+  scale_y_continuous(limits = c(1,7)) +
+  ylab("SoA Scores") + xlab("") + theme(legend.position="none")
+
+png("SoACompactPlot.png", width = 800, height = 600)
+plot(SoACompactPlot)
+dev.off()
+
+
+```
+
+```{r AccPerc compact plot}
+
+
+gg2 <- summarySE(dfData, measurevar="accPerc", groupvars =c( "Level"))
+#https://www.rdocumentation.org/packages/Rmisc/versions/1.5/topics/summarySE
+#gg2 has the red dots from the means it produces and the ci values used below
+
+ 
+
+accPercCompactPlot <- ggplot(gg2, aes(Level, accPerc, colour=Level)) + theme_bw(base_size = 25) +
+  geom_jitter(data = dfData, aes(Level, accPerc), width=0.2, color="black", alpha=0.5, size=3) + 
+  geom_point(position=position_dodge(0.2), size=4, colour="red") +
+  geom_errorbar(aes(ymin=accPerc-ci, ymax=accPerc+ci), width=.4, position = position_dodge(0.2), color=c("red", "blue")) +
+  scale_x_discrete(limits=c(), labels=c("Blocks", "Avatar")) +
+  scale_y_continuous(limits = c(0,30)) +
+  ylab("Performance(%)") + xlab("") + theme(legend.position="none")
+
+png("accPerc.png", width = 800, height = 600)
+plot(accPercCompactPlot)
+dev.off()
+
+
+```
 
